Complete image aspect ratio consistency. Refactor carousel into shapes on the fly.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_layout.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_layout.less
@@ -164,13 +164,15 @@ div#layout-navigation.group {
                         height: @layout-main-first-row-height;
 
                         &:nth-child(1) {
+                            // green about us
                             .make-md-column-offset(1);
-                            .make-md-column(9);
+                            .make-md-column(10);
                         }
 
                         &:nth-child(2) {
+                            // latest news
                             .make-md-column-offset(1);
-                            .make-md-column(24);
+                            .make-md-column(23);
                         }
                     }
                 }
@@ -188,18 +190,21 @@ div#layout-navigation.group {
                         }
 
                         &:nth-child(2) {
+                            // spotlight
                             .make-md-column-offset(1);
-                            .make-md-column(8);
+                            .make-md-column(9);
                         }
 
                         &:nth-child(3) {
+                            // upcoming events
                             .make-md-column-offset(1);
-                            .make-md-column(13);
+                            .make-md-column(12);
                         }
 
                         &:nth-child(4),
                         &:nth-child(5),
                         &:nth-child(6) {
+                            // super links
                             .make-md-column-offset(1);
                             .make-md-column(11);
                             height: auto;
