--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_latest-news.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_latest-news.less
@@ -4,7 +4,7 @@
 
         img {
             margin-top: 5px;
-            height: 60px; // must come after img-thumbnail
+            width: 116px; // must come after img-thumbnail
         }
 
         h2 {
