--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/Fields/MediaLibraryPicker-Large.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/Fields/MediaLibraryPicker-Large.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Orchard.ContentManagement
 @using Orchard.MediaLibrary.Fields
-@using System.Dynamic
 @using Orchard.Utility.Extensions;
 
 @{
@@ -12,7 +11,7 @@
 <section class="media-library-picker-field-large media-library-picker-field-@name.HtmlClassify()">
     @foreach (var content in contents)
     {
-        @Html.Partial("_MediaImageHack", content, new ViewDataDictionary() { { "Width", 475 } })
+        @Html.Partial("_MediaImage", content, new ViewDataDictionary() { { "Width", 480 } })
     }
 </section>
 
