--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_green-about.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_green-about.less
@@ -1,12 +1,12 @@
 ﻿#layout-main-container article.widget-greenabout {
-    background: @green;
-    color: @white;
+    background: @green-lcc;
+    color: #fff;
     font-size: @font-size-h1;
 
     a:last-child {
         font-size: @font-size-base;
         font-weight: @headings-font-weight;
-        color: @brown;
-        .link-arrow-right(@brown);
+        color: @brown-lcc;
+        .link-arrow-right(@brown-lcc);
     }
 }
