--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_latest-news.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_latest-news.less
@@ -13,14 +13,14 @@
 
         p, a {
             margin: @padding-small-vertical 0;
-            color: @blue;
+            color: @blue-lcc;
             font-size: @font-size-small;
         }
     }
     // this is a hack
     // because the link isn't inside the Display() call
     a.latest-news {
-        color: @blue;
+        color: @blue-lcc;
         font-size: @font-size-small;
         .link-double-arrow-right;
     }
