--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_orange-feature.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_orange-feature.less
@@ -1,7 +1,7 @@
 ﻿.widget-orangefeature {
 
-    &, a {
-        color: @white;
+    &, a, h1, h2 {
+        color: #fff;
         text-transform: uppercase;
     }
 
