--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_social-networking.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_social-networking.less
@@ -1,35 +1,54 @@
-﻿.widget-social-networking {
-    .make-md-column(12);
+﻿.align-with-search-form {
+    position: relative;
+    top: 2px;
+    left: 24px;
+}
+
+.set-the-size {
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 28px;
+    height: 28px;
+}
+
+.set-the-background {
+    background-repeat: no-repeat; // position the background
+    .opacity(0.6); // lighten
+}
+
+.handle-the-link-text {
+    overflow: hidden;
+    color: transparent;
+}
+
+.widget-social-networking {
+    text-align: right;
 
     p {
-        float: left;
+        display: inline-block;
     }
 
     p.link-field > span > a {
-        background-repeat: no-repeat;
-        background-size: contain;
-        overflow: hidden;
-        display: block;
-        width: 28px;
-        height: 28px;
-        color: transparent;
-        margin: 0;
-        padding: 0;
+        .set-the-background;
+        .handle-the-link-text;
+        .align-with-search-form;
+        .set-the-size;
     }
 
     p.link-field-flickr a {
-        background-image: url('@{img-directory}icon_flickr.png');
+        .link-flickr;
     }
 
     p.link-field-facebook a {
-        background-image: url('@{img-directory}icon_fb.png');
+        .link-facebook;
     }
 
     p.link-field-twitter a {
-        background-image: url('@{img-directory}icon_twitter.png');
+        .link-twitter;
     }
 
     p.link-field-r-s-s a {
-        background-image: url('@{img-directory}icon_rss.png');
+        .link-rss;
     }
 }
