--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_super-links.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_super-links.less
@@ -6,8 +6,8 @@
         font-size: @font-size-large;
         line-height: @line-height-large;
         font-weight: bolder;
-        color: @white;
-        .link-arrow-right(@white);                
+        color: #fff;
+        .link-arrow-right(#fff);                
 
         strong {
             margin-left: -1px;
@@ -18,19 +18,19 @@
     }
 
     &.widget-superlink1 {
-        background: @orange;
+        background: @orange-lcc;
     }
 
     &.widget-superlink2 {
-        background: @blue;
+        background: @blue-lcc;
     }
 
     &.widget-superlink3 {
-        background: @white;
+        background: #fff;
 
         p {
-            color: @brown;
-            .link-arrow-right(@brown);
+            color: @brown-lcc;
+            .link-arrow-right(@brown-lcc);
         }
     }
 }
