--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_widget-footer-menu.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_widget-footer-menu.less
@@ -12,12 +12,12 @@
 
             > li {
                 > h6 {
-                    color: @brown;
+                    color: @brown-lcc;
                     font-weight: bolder;
                 }
 
                 > a {
-                    color: @white;
+                    color: #fff;
                     text-decoration: none;
                 }
             }
