--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_layout.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_layout.less
@@ -1,45 +1,10 @@
-﻿
-/* #region shared and miscellaneous rules */
-body {
-    background: url('@{img-directory}banner_graphic.jpg') no-repeat;
-    background-position: 50% 0;
-    padding-top: 150px;
-    margin: auto;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-img {
-    max-width: 100%;
-}
-
-.projection-page {
-
-    h2 {
-        font-weight: bolder;
-    }
-}
-
-.main {
-    // find an lcc
-    width: 90%;
-    margin: auto;
-}
-
-iframe {
-    width: 100%;
-}
-
-.detail-widget-container #layout-main.group {
+﻿.detail-widget-container #layout-main.group {
     background: @gray-lcc;
 }
-.detail-page #layout-main.group {
-    background: @white;
-}
 
-/* #endregion */
+.detail-page #layout-main.group {
+    background: #fff;
+}
 
 div#layout-wrapper {
     max-width: @layout-wrapper-max-width; // this isn't vital... it supports the original look and feel
@@ -47,70 +12,26 @@ div#layout-wrapper {
 }
 
 div#layout-navigation.group {
-
-    > div.zone.zone-navigation {
-        padding: 0;
-
-        > article.widget-navigation.widget-menu-widget.widget {
-            .navbar;
-            .navbar-default;
-            margin-bottom: 0;
-            border:none;
-
-            div.container-fluid {
-                padding: 0;
-                position: relative;
-
-                div.navbar-header {
-
-                    a.navbar-brand {
-                        background-color: @white;
-                        background-image: url('@{img-directory}lcc-logo.png');
-                        background-repeat: no-repeat;
-                        bottom: 0;
-                        color: transparent; // for the hidden text
-                        height: 115px;
-                        left: 0;
-                        position: absolute;
-                        text-decoration: none;
-                        width: @logo-width;
-                    }
-                }
-
-                nav.navbar-collapse {
-                    padding: 0;
-
-                    ul {
-                        float: right;
-
-                        li.current {
-                            a {
-                                .box-shadow(none);
-                            }
-                        }
-
-                        a {
-                            .box-shadow(inset 2px 0px 5px 0px #CCC);
-                            font-size: @font-size-small * 0.90;
-                            font-weight: bolder;
-                            text-align: center;
-                            text-transform: uppercase;
-                            width: (@layout-wrapper-max-width - @logo-width) / 6;
-                        }
-                    }
-                }
-            }
-        }
-    }
+    // _navbar.less
 }
 
 #layout-featured {
-    background: @brown;
+    background: @brown-lcc;
 
     .zone-featured {
 
+        .widget-compelling-link {
+            .make-md-column(19);
+            padding-left:0;
+        }
+
+        .widget-social-networking {
+            .make-md-column(6);
+        }
+
         .widget-search-form {
-            .make-md-column(12); // this is 1/3 of the grid width
+            .make-md-column(11);
+            padding-right:0;
         }
 
         .widget-carousel {
@@ -125,7 +46,7 @@ div#layout-navigation.group {
 }
 
 #layout-before-main {
-    background: @orange;
+    background: @orange-lcc;
 
     .zone-before-main {
     }
@@ -136,7 +57,7 @@ div#layout-navigation.group {
     .widget-before-content,
     .widget-content {
         padding: @layout-main-widget-spacing;
-        background-color: @white;
+        background-color: #fff;
         .super-header;
     }
 
@@ -144,7 +65,7 @@ div#layout-navigation.group {
         /*font-size: @font-size-h6;
         line-height: @line-height-base;*/
         margin: 5px 0;
-        color: @orange;
+        color: @orange-lcc;
         font-weight: bolder;
         text-transform: uppercase;
     }
@@ -218,7 +139,7 @@ div#layout-navigation.group {
 }
 
 #layout-footer {
-    background-color: @orange;
+    background-color: @orange-lcc;
 
     #footer {
 
@@ -230,7 +151,7 @@ div#layout-navigation.group {
             .zone-footer {
                 text-align: right;
                 font-size: @font-size-small;
-                color: @white;
+                color: #fff;
             }
         }
     }
