--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_workitem-carousel.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_workitem-carousel.less
@@ -39,7 +39,7 @@
                 top: 0;
 
                 > h3 {
-                    color: @green;
+                    color: @green-lcc;
                     font-weight: bolder;
                     line-height: 1em;
                     margin: 0;
@@ -52,8 +52,8 @@
                 }
 
                 > a {
-                    .link-arrow-right(@orange);
-                    color: @orange;
+                    .link-arrow-right(@orange-lcc);
+                    color: @orange-lcc;
                     display: block;
                     font-size: @font-size-small;
                     font-weight: bolder;
@@ -89,7 +89,7 @@
         }
 
         .carousel-indicators {
-            background: @green;
+            background: @green-lcc;
             left: 0;
             list-style: none;
             margin: 0;
@@ -114,7 +114,7 @@
 
             div.active {
                 img {
-                    border: 3px solid @white;
+                    border: 3px solid #fff;
                 }
             }
         }
@@ -143,7 +143,7 @@
                         margin-bottom: @carousel-base-padding / 2;
 
                         > a {
-                            color: @green;
+                            color: @green-lcc;
                         }
                     }
 
@@ -153,13 +153,13 @@
 
                     > a {
                         display: block;
-                        color: @orange;
+                        color: @orange-lcc;
                         margin: 0;
                         margin-top: @carousel-base-padding / 1.5;
                         text-transform: uppercase;
                         font-size: 16px;
                         font-weight: bolder;
-                        .link-arrow-right(@orange);
+                        .link-arrow-right(@orange-lcc);
                     }
                 }
             }
