Change Orchard Feature name.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/StaticPages/FindAnLcc.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/StaticPages/FindAnLcc.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Orchard.Mvc;
 
-<section class="main">        
+<section id="find-an-lcc">        
 
     <h1>Find an LCC</h1>
     <div class="map-container">        
