--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -40,7 +40,8 @@
 
 @import "Theme/Less/_mixins.less"; 
 @import "Theme/Less/_layout.less";
-@import "Theme/Less/_navbar.less";  
+@import "Theme/Less/_navbar.less";
+@import "Theme/Less/_content-item.less";  
 @import "Theme/Less/_workitem-carousel.less";
 @import "Theme/Less/_council-meeting.less"; 
 @import "Theme/Less/_upcoming-events.less";
