--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_section-menu.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_section-menu.less
@@ -6,6 +6,7 @@
             background-color: @orange-lcc;
             color: #fff;
             font-weight: 700;
+            text-transform:capitalize;
         }
 
         ul > li > a {
