Fix navbar styles.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_text.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_text.less
@@ -1,6 +1,6 @@
 ﻿// the default is "Open Sans"
 
-.navbar ul li a,
+ul.navbar-nav li a,
 .widget-compelling-link p.text-field-lead {
     font-family: "Roboto Condensed";
 }
