Make the taxonomy link a drop down.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SectionMenuItemChildren.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SectionMenuItemChildren.cshtml
@@ -1,15 +1,33 @@
-﻿@{
-    // render children recursively
+﻿@using Orchard.Taxonomies.Models
+@using Orchard.ContentManagement;
+
+@{
+    // render childMenuItems recursively
     bool hasChildren = (Model.MenuItem.Items as ICollection<dynamic>).Any();
     if (hasChildren)
     {
-        var children = Enumerable.Cast<dynamic>(Model.MenuItem.Items);
-        foreach (var childItem in children)
+        var childMenuItems = Enumerable.Cast<dynamic>(Model.MenuItem.Items);
+        for (var i = 0; i < childMenuItems.Count; ++i)
         {
-            @Display.SectionMenuItem(MenuItem: childItem, IsTopLevel: false)
-            <ul>
-                @Display.SectionMenuItemChildren(MenuItem: childItem, IsTopLevel: false)
-            </ul>
+            var childMenuItem = childMenuItems[i];
+            if (childMenuItem.Content is TermPart)
+            {
+                // render the taxonomy terms
+                // my method is a hack, that said it works                
+                // see also http://stackoverflow.com/questions/25732672/how-do-we-cause-orchard-to-render-a-taxonomy-links-menu-text
+                var taxonomyName = childMenuItem.Content.Container.TaxonomyPart.Name;
+                var termMenuItems = (childMenuItems as ICollection<dynamic>).Where(c => c.Content is TermPart && c.Content.Container.TaxonomyPart.Name.Equals(taxonomyName));
+                i += termMenuItems.Count();
+
+                @Display.TaxonomyLinkDropDown(TaxonomyName: taxonomyName, TermMenuItems: termMenuItems);
+            }
+            else
+            {
+                @Display.SectionMenuItem(MenuItem: childMenuItem, IsTopLevel: false)
+                <ul>
+                    @Display.SectionMenuItemChildren(MenuItem: childMenuItem, IsTopLevel: false)
+                </ul>
+            }
         }
     }
 }
