Tweak splash page first row heights and fonts.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -1,6 +1,6 @@
 ﻿//
 // IMPORTANT
-// Theme.less uses a 36 column grid not the default bootstrap 12 column grid,
+// Theme.less uses a ***36 column grid*** not the default bootstrap 12 column grid,
 // because the LccNetwork layout requires smaller column increments.
 // So, if you want a column to span have the grid with, use col-md-18.
 // --------------------------------------------------
@@ -18,7 +18,7 @@
 @import 'Bootstrap/less/navbar.less';  
 
 // layout
-@layout-main-first-row-height: 240px;                
+@layout-main-first-row-height: 275px;                
 @layout-main-second-row-height: 393px;
 @layout-main-widget-spacing: 15px;     
 @layout-main-zone-spacing: 40px;          
