--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_green-about.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_green-about.less
@@ -1,10 +1,10 @@
 ﻿#layout-main-container article.widget-greenabout {
     background: @green-lcc;
     color: #fff;
-    font-size: @font-size-h1;
+    font-size: @font-size-h1 * 1.25;
 
     a:last-child {
-        font-size: @font-size-base;
+        font-size: @font-size-large;
         font-weight: @headings-font-weight;
         color: @brown-lcc;
         .link-arrow-right(@brown-lcc);
